# game

./: .gitignore  CMakeLists.txt  README.md
generic_game/DerivedData/ModuleCache.noindex/: Session.modulevalidation
generic_game/DerivedData/generic_game/: info.plist
generic_game/DerivedData/generic_game/Index/DataStore/v5/records/OI/: main.cpp-2W0K0CPGM8GOI
generic_game/DerivedData/generic_game/Index/DataStore/v5/records/VV/: iterator-1C6UT5LDVACVV
generic_game/DerivedData/generic_game/Index/DataStore/v5/units/: ResourcePath.o-25LZNXJT75PZI  main.o-12Y0APKH8KAKB
generic_game/DerivedData/generic_game/Index/UniDB/generic_game.xcindex/v13/p40754/: lock.mdb
generic_game/DerivedData/generic_game/Index/UniDB/generic_game.xcindex/v13/p41191/: lock.mdb
generic_game/DerivedData/generic_game/Logs/Issues/: 4026265A-DAE5-4355-B333-07EFBDAA6D4B.xcactivitylog  LogStoreManifest.plist
generic_game/DerivedData/generic_game/TextIndex/: TextFragmentIndex-v7.idx
generic_game/generic_game/: generic_game-Info.plist  main.cpp
generic_game/generic_game.xcodeproj/: project.pbxproj
generic_game/generic_game.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
generic_game/generic_game.xcodeproj/project.xcworkspace/xcuserdata/mariana.xcuserdatad/: UserInterfaceState.xcuserstate
generic_game/generic_game.xcodeproj/xcuserdata/mariana.xcuserdatad/xcschemes/: xcschememanagement.plist
